# tensor4j

./: .gitattributes  .gitignore  LICENSE  README.md  RUNTIMES.md  TESTING.md  pom.xml
algebra-demo/: README.md  pom.xml
algebra-demo/src/test/resources/: demo-equations.txt
chat-demo/: README.md  chat-enhanced.ps1  chat-enhanced.sh  chat-qwen.sh  chat.ps1  chat.sh  pom.xml
chat-demo/src/test/resources/: demo-prompts.txt
java/resources/: tinygrad-runtime-sampling-golden.json  tinygrad-sampling-golden.json
java/resources/fixtures/: .gitkeep  tinygrad-hello-logits.json
java/resources/models/: algebra-v1.t4j.json
java/resources/parity/: tinygrad-ggml-ops.json  tinygrad-lazy-shapes.json  tinygrad-lazy-tensor.json  tinygrad-ops.json
java/src/com/github/tensor4j/: GuiLauncher.java  Tensor4jMain.java
java/src/com/github/tensor4j/autograd/: AdaptivePool2dFunction.java  AddFunction.java  AutogradEngine.java  BatchNorm2dEvalFunction.java  BatchNorm2dTrainFunction.java  BiasAddFunction.java  ContiguousFunction.java  Conv2dFunction.java  ConvTranspose2dFunction.java  DivFunction.java  DropoutFunction.java  ExpandFunction.java  Function.java  GradFlow.java  GroupNormFunction.java  LayerNormFunction.java  LogSoftmaxFunction.java  MatMulFunction.java  MaxUnpool2dFunction.java  MeanFunction.java  MulFunction.java  NegFunction.java  PermuteFunction.java  Pool2dFunction.java  ReluFunction.java  ReshapeFunction.java  SoftmaxFunction.java  SumFunction.java  Transpose2dFunction.java
java/src/com/github/tensor4j/cli/: CliRunner.java
java/src/com/github/tensor4j/core/: AdaptivePool2dArg.java  AdaptivePool2dMath.java  BatchNorm2dMath.java  Conv2dArg.java  Conv2dMath.java  ConvIm2Col.java  ConvTranspose2dArg.java  ConvTranspose2dMath.java  ConvWinograd.java  DropoutMath.java  GroupNormMath.java  LayerNormMath.java  MaxPool2dResult.java  MaxUnpool2dMath.java  NormShape.java  PadShrink.java  Pool2dArg.java  Pool2dMath.java  Shape.java  SoftmaxMath.java  StorageBuffer.java  Strides.java  Tensor.java  (+3 more)
native/tensor4j-cuda/: CMakeLists.txt
native/tensor4j-cuda/src/: jni_cuda_device.cpp  jni_cuda_kernel.cpp
native/tensor4j-hip/: CMakeLists.txt
native/tensor4j-hip/src/: jni_hip_device.cpp
native/tensor4j-opencl/: CMakeLists.txt
native/tensor4j-opencl/src/: jni_ocl_device.cpp
native/tensor4j-sycl/: CMakeLists.txt
native/tensor4j-sycl/src/: jni_sycl_buffer.cpp  jni_sycl_device.cpp  jni_sycl_kernel.cpp  jni_sycl_stream.cpp
scripts/: capture_tinygrad_forward_golden.py  capture_tinygrad_q4_dequant_golden.py  capture_tinygrad_runtime_golden.py  capture_tinygrad_tokenizer_golden.py  compare_qwen_llama_tokens.py  dos2unix-java.sh  gen_tinygrad_sampling_golden.py
tensor4j-gguf-it/: pom.xml
(+367 files in other folders)
